--- a/.travis.yml
+++ b/.travis.yml
@@ -5,13 +5,22 @@ services:
     - docker
 
 before_script:
+    # dependencies
+    - pip install j2cli requests
+    - wget https://github.com/riotkit-org/ci-utils/archive/v2.0.0.zip -O /tmp/ci-utils.zip
+    - curl "https://raw.githubusercontent.com/riotkit-org/ci-utils/master/ci-integration/travis.sh" -s | bash
+
+    # activate ARM builds on travis
+    - /opt/riotkit/utils/bin/setup-travis-arm-builds
+
+    # authorization
     - echo "$DOCKER_PASSWORD" | sudo docker login -u "$DOCKER_USERNAME" --password-stdin
     - echo "$QUAY_PASSWORD" | sudo docker login -u "$QUAY_USERNAME" --password-stdin quay.io
 
 jobs:
   include:
     - stage: Build recent x86_64 image
-      script: make build ARCH=x86_64 GIT_TAG=${TRAVIS_TAG} PUSH=true
+      script: make build_image ARCH=x86_64 GIT_TAG=${TRAVIS_TAG} PUSH=true
 
     - stage: Build recent ARM image
-      script: make build ARCH=arm GIT_TAG=${TRAVIS_TAG} PUSH=true
+      script: make build_image ARCH=arm GIT_TAG=${TRAVIS_TAG} PUSH=true
