CI: Tox will now run tests on Python 3.6

--- a/.travis.yml
+++ b/.travis.yml
@@ -20,10 +20,11 @@ before_script:
 jobs:
   include:
     - stage: Run unit tests
+      python: 3.6
       script:
           - pip install -r ./requirements.txt
           - pip install -r ./requirements-dev.txt
-          - tox
+          - tox -e py36
 
     - stage: Build recent x86_64 image
       script: make build_image ARCH=x86_64 GIT_TAG=${TRAVIS_TAG} PUSH=true
