--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,38 @@
-asn1crypto==0.24.0
+-i https://pypi.org/simple
+appdirs==1.4.4
+attrs==19.3.0
 bcrypt==3.1.7
-certifi==2019.9.11
-cffi==1.12.3
+certifi==2020.6.20
+cffi==1.14.1
 chardet==3.0.4
-cryptography==2.7
-idna==2.8
-jinja2==2.10.1
-markupsafe==1.1.1
-paramiko==2.6.0
-psutil==5.6.3
-pycparser==2.19
-pynacl==1.3.0
-requests==2.22.0
-six==1.12.0
-tornado==6.0.3
-urllib3==1.25.6
+cryptography==3.0
+distlib==0.3.1
+filelock==3.0.12
+idna==2.10
+importlib-metadata==1.7.0 ; python_version < '3.8'
+importlib-resources==3.0.0 ; python_version < '3.7'
+jinja2==2.11.2
+jsonschema==3.2.0
+markupsafe==2.0.0a1
+packaging==20.4
+paramiko==2.7.1
+pbr==5.4.5
+pluggy==1.0.0.dev0
+psutil==5.7.2
+py==1.9.0
+pycparser==2.20
+pynacl==1.4.0
+pyparsing==3.0.0a2
+pyrsistent==0.16.0
+python-dotenv==0.13.0
+pyyaml==5.3.1
+requests==2.24.0
+rkd==2.1.0.0rc2.dev2
+six==1.15.0
+tabulate==0.8.7
+toml==0.10.1
+tornado==6.0.4
+tox==3.19.0
+urllib3==1.25.10
+virtualenv==20.0.30
+zipp==3.1.0 ; python_version < '3.8'
