--- a/Pipfile
+++ b/Pipfile
@@ -7,6 +7,7 @@ url = "https://pypi.org/simple"
 verify_ssl = true
 
 [dev-packages]
+tox = "==3.19.0"
 
 [packages]
 paramiko = "==2.7.1"
@@ -14,5 +15,7 @@ jinja2 = "==2.11.2"
 tornado = "==6.0.4"
 psutil = "==5.7.2"
 requests = "==2.24.0"
-tox = "==3.19.0"
-rkd = ">=2.1.0.0rc2.dev2"
+rkd = ">=2.1.1, <2.2"
+rkd-python = ">=2.1.1, <2.2"
+rkt-ciutils = ">=3.0.3, <3.1"
+rkt-utils = ">=3.0.3, <3.1"
