--- a/requirements.txt
+++ b/requirements.txt
@@ -1,38 +1,44 @@
 -i https://pypi.org/simple
-appdirs==1.4.4
 attrs==19.3.0
 bcrypt==3.1.7
+bleach==3.1.5
 certifi==2020.6.20
-cffi==1.14.1
+cffi==1.14.2
 chardet==3.0.4
 cryptography==3.0
-distlib==0.3.1
-filelock==3.0.12
+docutils==0.16
 idna==2.10
 importlib-metadata==1.7.0 ; python_version < '3.8'
-importlib-resources==3.0.0 ; python_version < '3.7'
+jeepney==0.4.3 ; sys_platform == 'linux'
 jinja2==2.11.2
 jsonschema==3.2.0
+keyring==21.3.0
 markupsafe==2.0.0a1
 packaging==20.4
 paramiko==2.7.1
 pbr==5.4.5
-pluggy==1.0.0.dev0
+pkginfo==1.5.0.1
 psutil==5.7.2
-py==1.9.0
 pycparser==2.20
+pygments==2.6.1
 pynacl==1.4.0
 pyparsing==3.0.0a2
 pyrsistent==0.16.0
 python-dotenv==0.13.0
 pyyaml==5.3.1
+readme-renderer==26.0
+requests-toolbelt==0.9.1
 requests==2.24.0
-rkd==2.1.0.0rc2.dev2
+rkd-python==2.1.1
+rkd==2.1.1
+rkt-ciutils==3.0.3
+rkt-utils==3.0.3
+secretstorage==3.1.2 ; sys_platform == 'linux'
 six==1.15.0
 tabulate==0.8.7
-toml==0.10.1
 tornado==6.0.4
-tox==3.19.0
+tqdm==4.48.2
+twine==3.1.1
 urllib3==1.25.10
-virtualenv==20.0.30
-zipp==3.1.0 ; python_version < '3.8'
+webencodings==0.5.1
+zipp==3.1.0
